fix: shift position layout fixes

--- a/apps/frontend/src/output.css
+++ b/apps/frontend/src/output.css
@@ -1796,6 +1796,9 @@
   .overflow-hidden {
     overflow: hidden;
   }
+  .overflow-scroll {
+    overflow: scroll;
+  }
   .overflow-y-auto {
     overflow-y: auto;
   }
